Implemented RegexParser and ComplexParser. ComplexParser is used from now on.